[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/player_unshaded.png" type="Texture" id=2]
[ext_resource path="res://Player/sword.png" type="Texture" id=3]
[ext_resource path="res://Sounds/sword.wav" type="AudioStream" id=4]
[ext_resource path="res://World/Shaders/shadow.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 2.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../SlimeHand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -62.3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "SwingLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../SlimeHand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.0, -200.3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "SwingRight"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../SlimeHand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, 100.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionBox:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionBox:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionBox:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionBox:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5125 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 15.88
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -20.0
scale_curve = SubResource( 8 )

[node name="Player" type="KinematicBody2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 5 )

[node name="SlimeHand" type="Sprite" parent="."]
visible = false
modulate = Color( 0.82, 0.82, 0.82, 1 )
position = Vector2( 8, 0 )
rotation = -1.08734
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2, -14 )

[node name="Slime" type="Sprite" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
texture = ExtResource( 2 )
hframes = 2

[node name="CollisionBox" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="HandAnimation" type="AnimationPlayer" parent="."]
pause_mode = 2
root_node = NodePath("../Slime")
anims/RESET = SubResource( 4 )
anims/SwingLeft = SubResource( 6 )
anims/SwingRight = SubResource( 5 )

[node name="SlimeAnimation" type="AnimationPlayer" parent="."]
pause_mode = 1
anims/RESET = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="Slash" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 0.25098, 0.752941, 0.352941, 1 )
position = Vector2( 0, 4 )
emitting = false
lifetime = 0.5
randomness = 1.0
process_material = SubResource( 9 )

[connection signal="animation_finished" from="HandAnimation" to="." method="_on_HandAnimation_animation_finished"]
